2014-01-11  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile:  Automatically update version numbers for
	installer.

	* src/win/wgraph.c (drawgraph):  When drawing to the screen, point
	symbols are drawn to a memory bitmap first, which is then copied to
	the target device. That way subsequent draws of the same point symbol
	just need to copy the bitmap. This speeds up drawing of graphs with
	a large number of point symbols.

	* src/win/wgdiplus.cpp (drawgraph_gdiplus):  The GDI+ backend uses
	the same technique, but was missing a case when to invalidate the
	cached bitmap.

	* src/win/wgnuplib.h src/win/wgdiplus.cpp src/win/wgraph.c:  Using
	MinGW 4.8.1, FontFamily::GenericSansSerif() results in unresolved
	externals during linking. This is a bug in MinGW's runtime.

	* src/win/winmain.c:  Current version of MinGW does not offer working
	version of __argc/__argv, but _argv/_argv. A web search shows that
	MinGW-w64 is different. This is a bug in MinGW's runtime.

	* win/gnuplot.iss (MinVersion):  Minimum required version of the
	installer is XP.

2014-01-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c:  Fix iteration over parametric function plots.
	Bug #1314

	* src/datafile.c (df_generate_pseudodata):  Allow use of '++' pseudofile
	to sample the parametric variables U and V in 3D parametric mode.

2014-01-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/datafile.h src/plot2d.c:  Only include support for
	"thru" if configured with --enable-backwards-compatibility

	* src/datafile.c src/gp_types.h src/graph3d.c src/plot2d.c src/plot3d.c
	src/tables.c src/tabulate.c:

	New keyword pair "with table" that bypasses all style-specific input
	processing, column restrictions, smoothing, etc.  For example:
	    set table "table.dat"
	    plot FOO using 1:2:3:4:5:($6+$7):8:9:10 with table

2014-01-08  Thomas Bleher <tbleher@gmx.de>

	* config/msvc/Makefile:  Add configuration option for compiling the qt