@@ -1,3 +1,10 @@
+2014-01-11  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/command.c (link_command):  Enforce a consistent linkage state;
+	we must either have both a forward and a reverse ("via" and "inverse")
+	function or neither.
+	Bug #1318
+
 2014-01-11  Bastian Maerkisch  <bmaerkisch@web.de>
 
 	* config/mingw/Makefile:  Automatically update version numbers for
